tests/ui/dep_order.fail.stderr
error: #[depends_on(x)] should be before #[depends_on(y)] to ensure consistent order of modules
 --> tests/ui/dep_order.fail.rs:6:18
  |
6 |     #[depends_on(x)]
  |                  ^

warning: unused import: `x`
 --> tests/ui/dep_order.fail.rs:6:18
  |
6 |     #[depends_on(x)]
  |                  ^
  |
  = note: `#[warn(unused_imports)]` on by default
